Efmub-Ogy/src/objects/CWRollup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Child_Additional_Logic__c</fullName>
        <label>Child Additional Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Field__c</fullName>
        <label>Child Field</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Object__c</fullName>
        <label>Child Object</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Parent_Field__c</fullName>
        <label>Child Parent Field</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Sort_Field__c</fullName>
        <label>Child Sort Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Child_Field__c</fullName>
        <label>Parent Child Field</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Field__c</fullName>
        <label>Parent Field</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <label>Parent Object</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Other_Field__c</fullName>
        <description>For first and last, this is the default field.</description>
        <label>Parent Other Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>CWRollup</label>
</CustomObject>